Closed Bug 367504 Opened 18 years ago Closed 18 years ago

Hang with -moz-inline-block, float ("yikes! spinning on a line over 1000 times!")

Categories

(Core :: Layout, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: dbaron)

References

Details

(4 keywords, Whiteboard: [patch])

Attachments

(2 files)

Attached file testcase
Debug: * Lots of ###!!! ASSERTION: aFrame is already associated with a region: '!GetFrameInfoFor(aFrame)', file /Users/admin/trunk/mozilla/layout/generic/nsSpaceManager.cpp, line 812 * Block(tbody)(1)@0x2ebcf84: yikes! spinning on a line over 1000 times! * ###!!! ABORT: file /Users/admin/trunk/mozilla/layout/generic/nsBlockFrame.cpp, line 3137 Opt: * Hang.
Looks like somebody needs to set NS_BLOCK_SPACE_MGR and probably NS_BLOCK_MARGIN_ROOT on inline blocks.
Yeah, http://www.w3.org/TR/CSS21/box.html#collapsing-margins says: * Margins of inline-block elements do not collapse (not even with their in-flow children). and http://www.w3.org/TR/CSS21/visuren.html#q15 says that inline blocks establish new block formatting contexts. I need to add some tests for these, but I'll probably put them in the patch for bug 9458.
Attached patch patchSplinter Review
Attachment #252079 - Flags: superreview?(roc)
Attachment #252079 - Flags: review?(roc)
(And this seems pretty safe for branches to me.)
Assignee: nobody → dbaron
OS: Mac OS X → All
Hardware: Macintosh → All
Whiteboard: [patch]
Attachment #252079 - Flags: superreview?(roc)
Attachment #252079 - Flags: superreview+
Attachment #252079 - Flags: review?(roc)
Attachment #252079 - Flags: review+
Checked in to trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attachment #252079 - Flags: approval1.8.1.2?
Attachment #252079 - Flags: approval1.8.0.10?
Flags: in-testsuite?
Comment on attachment 252079 [details] [diff] [review] patch Approved for both branches, a=jay for drivers.
Attachment #252079 - Flags: approval1.8.1.2?
Attachment #252079 - Flags: approval1.8.1.2+
Attachment #252079 - Flags: approval1.8.0.10?
Attachment #252079 - Flags: approval1.8.0.10+
Checked in to MOZILLA_1_8_BRANCH and MOZILLA_1_8_0_BRANCH.
Verified fixed on trunk, I did hang with a 2007-01-22 build, but not anymore with a 2007-01-23 build. On branch builds, the testcase doesn't hang before and after the patch went in. I checked with the branch cvs logs that the patch went in.
Status: RESOLVED → VERIFIED
dbaron checked two reftests for this bug in when he landed the fix for bug 9458. http://lxr.mozilla.org/mozilla/find?string=367504
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: