Give inline-blocks NS_BLOCK_SPACE_MGR and NS_BLOCK_MARGIN_ROOT.  b=367504  r+sr=roc